--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.application.name=spring-boot-camel-rest-dsl
 camel.springboot.name=CamelCxfRest
 
 # to reconfigure the camel servlet context-path mapping to use /api/* instead of /camel/*
-camel.component.servlet.mapping.context-path=/api/*
+camel.component.servlet.mapping.context-path=/*
+#server.servlet-path=/api
 
 spring.mvc.static-path-pattern=/resources/**
 
@@ -27,7 +28,7 @@ server.address=0.0.0.0
 management.address=0.0.0.0
 
 # lets use a different management port in case you need to listen to HTTP requests on 8080
-management.port=8080
+management.port=8081
 
 #------------------------------------------------------------------------------
 # Actuator
