Servicio creado, solo envía a la cola de socket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.application.name=spring-boot-camel-rest-dsl
 camel.springboot.name=CamelCxfRest
 
 # to reconfigure the camel servlet context-path mapping to use /api/* instead of /camel/*
-camel.component.servlet.mapping.context-path=/*
-#server.servlet-path=/api
+#camel.component.servlet.mapping.context-path=/api/*
+server.servlet-path=/*
 
 spring.mvc.static-path-pattern=/resources/**
 
